<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="10"
    android:columnCount="2"
    android:background="@color/colorBackGround"
    tools:context=".AddEvent">

    <EditText
        android:id="@+id/textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:clickable="true"
        android:textColor="@color/colorText"
        android:text="@string/add_event_title" />

    <ImageView
        android:id="@+id/imageView_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:contentDescription="@string/add_event_time"
        app:srcCompat="@drawable/ic_calendar" />

    <TextView
        android:id="@+id/textView_startDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:clickable="true"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textColor="@color/colorText"
        android:layout_marginLeft="5dp"

        android:text="@string/add_event_start_date" />

    <TextView
        android:id="@+id/textView_endDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:clickable="true"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textColor="@color/colorText"
        android:layout_marginLeft="5dp"
        android:text="@string/add_event_end_date" />

    <ImageView
        android:id="@+id/imageView_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:contentDescription="@string/add_event_time"
        app:srcCompat="@drawable/ic_access_time" />

    <TextView
        android:id="@+id/textView_startTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:clickable="true"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textColor="@color/colorText"
        android:layout_marginLeft="5dp"
        android:text="@string/add_event_start_time" />

    <TextView
        android:id="@+id/textView_endTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:clickable="true"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textColor="@color/colorText"
        android:layout_marginLeft="5dp"
        android:text="@string/add_event_end_time" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="26dp"
        android:layout_height="44dp"
        android:layout_row="4"
        android:layout_column="0"
        android:text="" />

    <ImageView
        android:id="@+id/imageView_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        app:srcCompat="@drawable/ic_repeat" />

    <Spinner
        android:id="@+id/spinner_repeat"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_row="5"
        android:layout_column="1" />


    <ImageView
        android:id="@+id/imageView_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        app:srcCompat="@drawable/ic_location" />

    <TextView
        android:id="@+id/textView_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="1"
        android:clickable="true"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textColor="@color/colorText"
        android:layout_marginLeft="5dp"
        android:text="@string/add_event_location" />

    <ImageView
        android:id="@+id/imageView_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        app:srcCompat="@drawable/ic_access_alarm" />

    <TextView
        android:id="@+id/textView_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="1"
        android:clickable="true"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textColor="@color/colorText"
        android:layout_marginLeft="5dp"
        android:text="@string/add_event_alert" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="0"
        app:srcCompat="@drawable/ic_event_note" />

    <EditText
        android:id="@+id/textView_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="1"
        android:clickable="true"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textColor="@color/colorText"
        android:inputType="textMultiLine"
        android:layout_marginLeft="5dp"
        android:text="@string/add_event_notes" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="9"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_marginRight="90dp"
        android:textColor="@color/colorText"
        android:text="@string/add_event_save"/>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        app:srcCompat="@drawable/ic_title_black_24dp" />


</GridLayout>